10.2. Added gson usage to handle .json files.