@@ -12,6 +12,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class PathStorage extends AbstractStorage<Path> {
@@ -88,7 +89,7 @@ public class PathStorage extends AbstractStorage<Path> {
     protected List<Resume> doCopyAll() {
         return getPaths()
                 .map(this::doGet)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private Stream<Path> getPaths() {
